fixed spacing, added screenshot to readme

--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,6 @@ li {
 }
 
 .game-info {
-  margin-left: 20px;
+  margin-left: 5em;
 }
 
